force-app/main/default/objects/Contact/fields/BPInterlocutor__c.field-meta.xml
<CustomField>
    <fullName>BPInterlocutor__c</fullName>
    <formula>IF( ISPICKVAL(Account.Category__c , &apos;Piccoli Condomini&apos;) || ISPICKVAL(Account.Category__c , &apos;Grandi Condomini&apos;),Account.CustomerCode__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BP</label>
    <type>Text</type>
</CustomField>