force-app/main/default/objects/Contact/fields/CertifiedEmail__c.field-meta.xml
<CustomField>
    <fullName>CertifiedEmail__c</fullName>
    <label>Pec</label>
    <type>Email</type>
</CustomField>