force-app/main/default/objects/Contact/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Società Silos</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CompanyOwner__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_Company</valueSetName>
    </valueSet>
</CustomField>