force-app/main/default/objects/Contact/fields/DegreeOfStudies__c.field-meta.xml
<CustomField>
    <fullName>DegreeOfStudies__c</fullName>
    <label>Titolo di studio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DegreeOfStudies</valueSetName>
    </valueSet>
</CustomField>