force-app/main/default/objects/Contact/fields/GlobalMigrationKey__c.field-meta.xml
<CustomField>
    <fullName>GlobalMigrationKey__c</fullName>
    <description>Generato in fase di migrazione; post migrazione conterrà concatenazione CF + &quot;-&quot; + &quot;PIVA&quot; + &quot;-&quot; + CompanyOwner</description>
    <externalId>true</externalId>
    <label>Chiave globale di migrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>