force-app/main/default/objects/Contact/fields/InterestProduct__c.field-meta.xml
<CustomField>
    <fullName>InterestProduct__c</fullName>
    <label>Prodotto di interesse</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ContactReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_InterestProduct</valueSetName>
    </valueSet>
</CustomField>