force-app/main/default/objects/Contact/fields/KeyIBMUnica__c.field-meta.xml
<CustomField>
    <fullName>KeyIBMUnica__c</fullName>
    <externalId>true</externalId>
    <label>Chiave IBM Unica</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>