force-app/main/default/objects/Contact/fields/LastGeolocationLongitude__c.field-meta.xml
<CustomField>
    <fullName>LastGeolocationLongitude__c</fullName>
    <label>Last Geolocation Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>