force-app/main/default/objects/Contact/fields/MailingCityCode__c.field-meta.xml
<CustomField>
    <fullName>MailingCityCode__c</fullName>
    <description>Codice Comune SAP</description>
    <label>Codice ISTAT [Residenziale/Sede Legale]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>