force-app/main/default/objects/Contact/fields/MailingIsAddressVerified__c.field-meta.xml
<CustomField>
    <fullName>MailingIsAddressVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirizzo Verificato [Residenziale/Sede</label>
    <type>Checkbox</type>
</CustomField>