force-app/main/default/objects/Contact/fields/MailingPlace__c.field-meta.xml
<CustomField>
    <fullName>MailingPlace__c</fullName>
    <label>Località [Residenziale/Sede Legale]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>