force-app/main/default/objects/Contact/fields/MailingPlaceCode__c.field-meta.xml
<CustomField>
    <fullName>MailingPlaceCode__c</fullName>
    <label>Codice Località [Residenziale/Sede Legal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>