force-app/main/default/objects/Contact/fields/MailingRegion__c.field-meta.xml
<CustomField>
    <fullName>MailingRegion__c</fullName>
    <label>Regione[Residenziale/Sede Legale]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>