force-app/main/default/objects/Contact/fields/MailingStreetName__c.field-meta.xml
<CustomField>
    <fullName>MailingStreetName__c</fullName>
    <description>Nome via composto da toponimo + nome strada</description>
    <label>Nome Via [Residenziale/Sede Legale]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>