force-app/main/default/objects/Contact/fields/MailingStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>MailingStreetNumber__c</fullName>
    <label>Civico [Residenziale/Sede Legale]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>