force-app/main/default/objects/Contact/fields/MailingStreetNumberExtension__c.field-meta.xml
<CustomField>
    <fullName>MailingStreetNumberExtension__c</fullName>
    <label>Estens.Civico [Residenziale/Sede Legale]</label>
    <length>15</length>
    <type>Text</type>
</CustomField>