force-app/main/default/objects/Contact/fields/SAPIntegrationID__c.field-meta.xml
<CustomField>
    <fullName>SAPIntegrationID__c</fullName>
    <description>Campo per aggancio contatto da primo ritorno da Sap.</description>
    <label>Identificativo Integrazione SAP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>