force-app/main/default/objects/Contact/fields/SourceAgency__c.field-meta.xml
<CustomField>
    <fullName>SourceAgency__c</fullName>
    <label>Agenzia Fonte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Covisian</fullName>
            </value>
            <value>
                <fullName>Koinè Bologna Srl</fullName>
            </value>
            <value>
                <fullName>Koinè Srl</fullName>
            </value>
            <value>
                <fullName>Linetech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>