force-app/main/default/objects/Contact/fields/SourceDetail__c.field-meta.xml
<CustomField>
    <fullName>SourceDetail__c</fullName>
    <label>Dettaglio Fonte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADSALA</fullName>
            </value>
            <value>
                <fullName>ADSALSA</fullName>
            </value>
            <value>
                <fullName>ecc</fullName>
            </value>
            <value>
                <fullName>sito standard</fullName>
            </value>
            <value>
                <fullName>sito standard proattivo</fullName>
            </value>
            <value>
                <fullName>chat</fullName>
            </value>
            <value>
                <fullName>prodotti HVAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>