force-app/main/default/objects/Contact/fields/VATNumber__c.field-meta.xml
<CustomField>
    <fullName>VATNumber__c</fullName>
    <label>Partita Iva</label>
    <length>30</length>
    <type>Text</type>
</CustomField>