force-app/main/default/objects/Contact/recordTypes/HDT_RT_AfterCreate.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_AfterCreate</fullName>
    <active>false</active>
    <label>Record Salvato</label>
</RecordType>