force-app/main/default/objects/Contact/recordTypes/HDT_RT_Create.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Create</fullName>
    <active>true</active>
    <label>Creazione</label>
</RecordType>