force-app/main/default/objects/Contact/validationRules/Check_Only_Number_Mobile.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Only_Number_Mobile</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	NOT(
		AND(
			CONTAINS($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Contact.SkipUsernames__c,$User.Username), 
			OR(ISBLANK($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Contact.SkipDueDateTime__c),DATETIMEVALUE(NOW()) &lt; DATETIMEVALUE($CustomMetadata.HDT_AutomationToggle__mdt.HDT_TRH_Contact.SkipDueDateTime__c))
		)
	),
	NOT(REGEX( MobilePhone , &quot;^[0-9]*$&quot;))
)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Il numero di cellulare può contenere solo numeri</errorMessage>
</ValidationRule>